--- a/sample/pom.xml
+++ b/sample/pom.xml
@@ -25,7 +25,8 @@
 	<mysql-connector-java.version>5.1.30</mysql-connector-java.version>
 	<druid.version>1.0.29</druid.version>
 	<mybatis-spring-boot-starter.version>1.2.0</mybatis-spring-boot-starter.version>
-	<druid.version>1.0.29</druid.version>    
+	<druid.version>1.0.29</druid.version>
+	<cglib.version>3.2.5</cglib.version>  
   </properties>
   
   <dependencyManagement>
@@ -34,6 +35,7 @@
   			<groupId>junit</groupId>
   			<artifactId>junit</artifactId>
   			<version>${junit.version}</version>
+  			<scope>test</scope>
   		</dependency>
 		<dependency>
 			<!-- Import dependency management from Spring Boot -->
@@ -73,7 +75,11 @@
 		    <artifactId>druid</artifactId>
 		    <version>${druid.version}</version>
 		</dependency>		
-				
+		<dependency>
+		    <groupId>cglib</groupId>
+		    <artifactId>cglib</artifactId>
+		    <version>${cglib.version}</version>
+		</dependency>				
   	</dependencies>
   
   </dependencyManagement>
@@ -82,6 +88,7 @@
   <modules>
     <module>structure</module>
      <module>dynamic-datasource</module>
+    <module>design-pattern</module>
   </modules>
 
   <build>
