--- a/sample/dynamic-datasource/src/main/resources/application.properties
+++ b/sample/dynamic-datasource/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+debug=true
 spring.datasource.db_1.url=jdbc:mysql://192.168.10.217:3306/ycloud?useUnicode=true&characterEncoding=utf-8
 spring.datasource.db_1.username=root
 spring.datasource.db_1.password=rootwywk123
