--- a/sample/algorithm/pom.xml
+++ b/sample/algorithm/pom.xml
@@ -7,9 +7,7 @@
     <artifactId>sample</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
-  <groupId>com.sydney.sample</groupId>
   <artifactId>algorithm</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
   <name>algorithm</name>
   <url>http://maven.apache.org</url>
   <properties>
@@ -19,8 +17,13 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    
+	<dependency>
+	    <groupId>commons-codec</groupId>
+	    <artifactId>commons-codec</artifactId>
+	</dependency>	   
+    
   </dependencies>
 </project>
